@@ -17,7 +17,7 @@ client/actionreader.py
 client/__init__.py
 client/configurator.py
 client/csocket.py
-server/ssocket.py
+server/asyncserver.py
 server/banticket.py
 server/filter.py
 server/filtergamin.py
